    underlying algorithm is an adaptation of the breakpoint algorithm to
    Generalized Büchi conditions.

  - The new function spot::rabin_to_parity() is able to translate a
    deterministic Rabin-like automaton to an equivalent parity (max
    odd) automaton. The number of priorities is twice the number of
    Rabin pairs.

New in spot 2.4 (2017-09-06)

  Build:

  - Spot is now built in C++14 mode, so you need at least GCC 5 or
    clang 3.4.  The current version of all major linux distributions
    ship with at least GCC 6, which defaults to C++14, so this should
    not be a problem.  In *this* release of Spot, most of the header
    files are still C++11 compatible, so you should be able to include
    Spot in a C++11 project in case you do not yet want to upgrade.
    There is also an --enable-c++17 option to configure in case you
    want to force a build of Spot in C++17 mode.

  Tools:

  - genaut is a new binary that produces families of automata defined
    in the literature (in the same way as we have genltl for LTL
    formulas).

  - autcross is a new binary that compares the output of tools
    transforming automata (in the same way as we have ltlcross for
    LTL translators).

  - genltl learned two generate two new families of formulas:
      --fxg-or=RANGE         F(p0 | XG(p1 | XG(p2 | ... XG(pn))))
      --gxf-and=RANGE        G(p0 & XF(p1 & XF(p2 & ... XF(pn))))
    The later is a generalization of --eh-pattern=9, for which a
    single state TGBA always exists (but previous version of Spot
    would build larger automata).

  - autfilt learned to build the union (--sum) or the intersection
    (--sum-and) of two languages by putting two automata side-by-side
    and fiddling with the initial states.  This complements the already
    implemented intersection (--product) and union (--product-or),
    both based on a product.

  - autfilt learned to complement any alternating automaton with
    option --dualize.   (See spot::dualize() below.)