@@ -55,6 +55,7 @@ twaalgos_HEADERS = \
   lbtt.hh \
   ltl2taa.hh \
   ltl2tgba_fm.hh \
+  ltl2tgba_rec.hh \
   magic.hh \
   mask.hh \
   minimize.hh \
@@ -116,6 +117,7 @@ libtwaalgos_la_SOURCES = \
   lbtt.cc \
   ltl2taa.cc \
   ltl2tgba_fm.cc \
+  ltl2tgba_rec.cc \
   magic.cc \
   mask.cc \
   minimize.cc \
